--- a/index.html
+++ b/index.html
@@ -8,5 +8,24 @@
 <body>
     <h1>hello rania</h1>
     <h2>hi ranoucha</h2>
+    <h3>frome the athor side </h3>
+    <table>
+        <thead>
+            <tr>
+                <th>name</th>
+                <th>phone</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>2</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>4</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
